Some fixes, popups z-index fix

--- a/src/components/PopupComponentsGroup/_popupStyles.module.scss
+++ b/src/components/PopupComponentsGroup/_popupStyles.module.scss
@@ -5,6 +5,7 @@
   transform: translate(-50%, -50%);
 
   &Wrapper {
+    z-index: 5;
     position: fixed;
     top: 0;
     left: 0;
